kubernetes/stage/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chack-chats-service-deployment
  labels:
    app: chack-chats-service
    name: chack-chats-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chack-chats-service
  template:
    metadata:
      labels:
        app: chack-chats-service
    spec:
      containers:
        - name: chack-chats-service
          image: artemowkin/chack-chats-service:latest
          ports:
            - containerPort: 8000
              name: web
