kubernetes/stage/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: diffaction-chats-service
spec:
  selector:
    app: diffaction-chats-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: web
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: grpc
